Fixed icon alignment

--- a/styles/common.css
+++ b/styles/common.css
@@ -1,1 +1,104 @@
 /* Common styles */
+body {
+    margin: 0;
+    background-color: black;
+    color: white;
+    font-family: 'Inter';
+}
+
+nav, nav {
+    top: 0;
+    display: grid;
+    position: fixed;
+    margin: 0;
+    padding: 0.5em;
+    background-color: #00000080;
+    backdrop-filter: blur(8px);
+    border-bottom: solid 1px #ffffff40;
+    width: 100%;
+    
+    align-content: center;
+    align-items: center;
+    align-self: center;
+    vertical-align: middle;
+}
+nav div a, nav div span {
+    display: inline-flex;
+    align-content: center;
+    align-items: center;
+    align-self: center;
+
+    justify-content: center;
+
+    padding: 0.5em 1.5em;
+    margin: 0;
+    overflow: hidden;
+    text-align: center;
+    text-decoration-line: none;
+    color: white;
+
+    border-radius: 100em;
+    transition-duration: 0.3s;
+}
+nav a:hover {
+    background-color: #ffffff40;
+
+    border-radius: 100em;
+    transition-duration: 0.3s;
+}
+
+nav img {
+    display: inline-block;
+    height: 1.5em;
+}
+
+nav div {
+    display: inline-block;
+}
+
+.space {
+    display: inline-block;
+    margin-left: 0;
+    margin-right: 1fr;
+}
+
+.chosen {
+    color: black;
+    padding: 0.5em 1.5em;
+    margin: 0;
+    background-color: white;
+    border-radius: 100em;
+}
+
+.navright {
+    display: inline;
+    float: right;
+}
+
+.imglink {
+    padding: 0.5em 0.7em;
+    margin: 0;
+}
+
+.center {
+    align-items: center;
+    text-align: center;
+    align-content: center;
+
+    margin: 0 auto;
+}
+
+.logo {
+    grid-column: 1;
+    margin-left: 4em;
+}
+
+.nav {
+    grid-column: 2;
+}
+
+.trail {
+    grid-column: 3;
+    text-align: right;
+    margin-right: 4em;
+}
